test/mulberry/Language/same_scope_redefinition_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var value: UInt64 = 1;
  var value: UInt64 = 2;
  return value;
}

# CHECK: error: redefinition of variable
